--- a/codigos/web/ura-joystick/index.html
+++ b/codigos/web/ura-joystick/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
   </head>
   <body>
@@ -63,7 +63,7 @@
             />
           </button>
             <div class="icons-botton">
-              <button class="btns-backb" onclick="move('/trs');">+
+              <button class="btns-backb" onclick="move('/trs');">
               <img
                 src="./assets/downbutton.svg"
                 alt="Sinais Controles"
