--- a/codigos/web/ura-joystick/index.html
+++ b/codigos/web/ura-joystick/index.html
@@ -27,54 +27,56 @@
           </form>
         </div>
       </div>
-      <img src="./assets/line.svg" class="line" />
+      <div class="linediv">
+        <img src="./assets/line.svg" class="line" />
+      </div>
       <div class="right">
         <h1>CONTROLE</h1>
         <div class="icons">
           <div class="icons-top">
             <button class="btns-frontb" onclick="move('/frt');">
-            <img
-              src="./assets/upbutton.svg"
-              alt="Sinais Controles"
-              class="icons-image"
-            />
-          </button>
+              <img
+                src="./assets/upbutton.svg"
+                alt="Sinais Controles"
+                class="icons-image"
+              />
+            </button>
           </div>
           <div class="icons-center">
             <button class="btns-leftb" onclick="move('/esq');">
-            <img
-              src="./assets/leftbutton.svg"
-              alt="Sinais Controles"
-              class="icons-image"
-            />
-          </button>
-          <button class="btns-stopb" onclick="move('/stop');">
-            <img
-              src="assets/stopbutton.svg"
-              alt="Sinais Controles"
-              class="icons-image"
-            />
-          </button>
-          <button class="btns-rightb" onclick="move('/drt');">
-            <img
-              src="./assets/rightbutton.svg"
-              alt="Sinais Controles"
-              class="icons-image"
-            />
-          </button>
-            <div class="icons-botton">
-              <button class="btns-backb" onclick="move('/trs');">
+              <img
+                src="./assets/leftbutton.svg"
+                alt="Sinais Controles"
+                class="icons-image"
+              />
+            </button>
+            <button class="btns-stopb" onclick="move('/stop');">
+              <img
+                src="assets/stopbutton.svg"
+                alt="Sinais Controles"
+                class="icons-image"
+              />
+            </button>
+            <button class="btns-rightb" onclick="move('/drt');">
+              <img
+                src="./assets/rightbutton.svg"
+                alt="Sinais Controles"
+                class="icons-image"
+              />
+            </button>
+          </div>
+          <div class="icons-botton">
+            <button class="btns-backb" onclick="move('/trs');">
               <img
                 src="./assets/downbutton.svg"
                 alt="Sinais Controles"
                 class="icons-image"
               />
             </button>
-            </div>
           </div>
         </div>
       </div>
     </div>
-    <script src="script/script.js"></script>
+    <script src="script/scripts.js"></script>
   </body>
 </html>
